[package]
name = "chip8vm"
version = "0.8.2"
edition = "2018"
description = "A Chip-8 Virtual Machine"
authors = ["Arturo J. Pérez <arturjosep@gmail.com>"]
keywords = ["chip-8", "emulator", "vm", "no_std",]
homepage = ""
repository = ""
documentation = ""
license = "MIT"

exclude = [
    "games/*"
]

[dev-dependencies]
argh = "0.1.3"
rand = "0.7.3"
ggez = "0.5.1"
